fix(content/entries): fix style of media type column (align icon to center)

--- a/src/shared/content-shared/entries/entries-table/entries-table.component.scss
+++ b/src/shared/content-shared/entries/entries-table/entries-table.component.scss
@@ -73,6 +73,7 @@
   }
   .kMediaTypeIcon{
     font-size: 16px;
+    text-align: center;
     div{
       display: inline-block;
     }
